--- a/index.html
+++ b/index.html
@@ -5,26 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilo.css">
-    <title>Criando página HTML</title>
+    <title>Vava</title>
 </head>
 <body>
     <header>
-        <h1>Criação de Páginas com HTML, CSS e JS</h1>
+        <h1>Valorant</h1>
         <figure>
-            <img class="img_topo" src="img/pitty3.png" alt="Foto da Pitty com fundo branco">
+            <img class="img_topo" src="https://pbs.twimg.com/media/FHQEtVkXwAQMs8L.jpg:large" alt="Foto do valorant">
         </figure>
     </header>
     <div class="container">
-        <h1>Pitty- Biografia</h1>       
-        <p>Pitty (1977) é uma cantora brasileira de rock, considerada uma das maiores do gênero no Brasil.</p>
-        <p>Priscilla Novaes Leone (1977) nasceu em Salvador, Bahia, no dia 7 de outubro de 1977, mas passou sua infância em Porto Seguro. Foi influenciada pela música do cantor e compositor Raul Seixas através de seu pai, que era dono de um bar. Outras influências musicais de Pitty foram importantes para a sua carreira musical: Elvis Presley, Nirvana, Lou Reed e Metallica.</p>
-        <p>Entre 1995 e 1997, Pitty fez parte da banda Shes tocando bateria, e da banda a Inkoma, de 1995 até 2001.</p>
-        <p>Pitty foi aluna de música da Universidade Federal da Bahia. Lá, fez contatos com o produtor Rafael Ramos, conhecido por produzir bandas como os Raimundos.</p>
+        <h1>Valorant- Biografia</h1>       
+        <p>Valorant é um jogo eletrônico multijogador gratuito para jogar de tiro em primeira pessoa desenvolvido e publicado pela Riot Games.</p>
+        <p></p>
         <figure>
-             <img class="img_corpo" src="img/pitty2.jpg" alt="Pitty cantando">
+             <img class="img_corpo" src="img/vava.png" alt="Personagem novo de valorant">
         </figure>
-        <p>A partir de 2003, passou a cantar em outra banda, Pitty, que levava o seu nome. Foi uma das bandas de rock mais bem sucedidas a partir da década de 2000, vendendo cerca de 5 milhões de álbuns.</p>
-            
+        <p>Lançada em 24 de novembro, a coleção Champions 2021 é uma conjunto de itens em edição limitada com o valor de 6.263 Valorant Points (VPs), contendo skins para Vandal (2.675 VPs), Karambit (5.350 VPs) e diversos acessórios como cards (375 VPs cada) e um título (200 VPs).</p>
+         <h2> Riot Gamaes</h2>
+         <p>Riot Games é uma empresa americana fundada como um estúdio de jogos independente em 2006 por Brandon "Ryze" Beck e Marc "Tryndamere" Merril, em Los Angeles. Em 2015 foi comprada pela empresa chinesa Tencent</p>
+         <h3> Personagem</h3>
+         <figure>
+            <img class="img_corpo" src="img/personagens vavas.jpg" alt="Personagem novo de valorant">
+       </figure>
+         <p>Brimstone:Vindo diretamente dos EUA, o arsenal orbital de Brimstone garante que o esquadrão dele esteja sempre em vantagem. Sua capacidade de oferecer utilidade com precisão a distância faz dele um comandante inigualável na linha de frente. </p>
+         <figure>
+            <img class="img_corpo" src="img/Brimtone.png" alt="Personagem novo de valorant">
+       </figure>
+         <p>Viper:Viper, a química dos Estados Unidos, emprega uma variedade de dispositivos químicos venenosos para controlar o campo de batalha e prejudicar a visão do inimigo. Se as toxinas não matarem a presa, seus jogos mentais certamente o farão.     </p>
+         <p>Sage:Como uma verdadeira fortaleza chinesa, Sage traz segurança para si mesma e para a equipe aonde quer que vá. Capaz de reviver aliados e rechaçar investidas agressivas, ela oferece um centro de calmaria em meio ao caos da batalha. </p>
+         <p>Omen: Omen, uma lembrança fantasmagórica, caça nas sombras. Ele cega os inimigos, teleporta-se pelo campo e deixa a paranoia assumir o controle enquanto o adversário tenta descobrir de onde virá seu próximo ataque.</p>
+         <figure>
+            <img class="img_corpo" src="img/omen.jpg" alt="Personagem novo de valorant">
+       </figure>
+         <p>Killjoy: Killjoy, uma alemã genial, defende o campo de batalha facilmente usando seu arsenal de invenções. Se o dano causado por seu equipamento não der cabo dos inimigos, os efeitos negativos de seus queridos robôs dão conta do recado.</p>
+         <p>Cypher:Cypher, um vendedor de informações do Marrocos, é uma verdadeira rede de vigilância de um homem só que fica de olho em cada movimento dos inimigos. Nenhum segredo está a salvo. Nenhuma manobra passa despercebida. Cypher está sempre vigiando. </p>
+         <p>Sova:Nascido sob o eterno inverno das tundras russas, Sova rastreia, encontra e elimina inimigos com eficiência e precisão implacáveis. Seu arco personalizado e suas habilidades inigualáveis de reconhecimento garantem que nenhuma presa escape. </p>
+         <p>Phoenix:Chegando com tudo diretamente do Reino Unido, o poder estelar de Phoenix reluz em seu estilo de luta, incendiando o campo de batalha com luz e estilo. Tendo ajuda ou não, ele entra na luta como e quando achar que deve. </p>
+         <p>Jett: Representando a Coreia do Sul, sua terra natal, Jett tem um estilo de luta ágil e evasivo que permite que ela assuma riscos como ninguém. Ela corre em meio a qualquer confronto, cortando os inimigos antes mesmo que eles percebam quem ou o que os atingiu.</p>
+         <p>Reyna: Criada no coração do México, Reyna domina o combate individual, destacando-se a cada abate efetuado. Sua capacidade só é limitada por sua própria perícia, tornando-a bastante dependente de desempenho.</p>
+         <p>Raze:Raze chega do Brasil em uma explosão de carisma e armas letais. Com seu estilo de jogo "porradeiro", ela é craque em desentocar inimigos entrincheirados e limpar espaços apertados com uma bela dose de BUUUM! </p>
+         <p>Breach: Breach, o homem-biônico sueco, dispara poderosos jatos cinéticos para forçar a abertura de um caminho pelo território inimigo. O dano e a interrupção que ele causa garantem que nenhuma luta seja justa.</p>
+         <p>Skye:Mandando um salve direto da Austrália, Skye e sua equipe de feras desbravam territórios hostis. Com seus poderes de cura e suas criações que partem pra cima dos inimigos, qualquer equipe ficará mais forte e mais segura tendo Skye como aliada. </p>
+         <p>Yoru: Yoru, nativo do Japão, abre fendas na realidade para infiltrar as linhas inimigas sem ser visto. Ele usa tanto artimanhas quanto táticas agressivas, e os alvos são abatidos sem saber de onde o ataque veio.</p>
+         <p>Astra: Astra, a Agente ganense, utiliza energias cósmicas para moldar o campo de batalha a seu bel-prazer. Com total domínio da sua forma astral e um talento estratégico nato, ela está sempre anos-luz à frente dos inimigos.</p>
+         <p>KAY/O: KAY/O é uma máquina de guerra construída com um único propósito: neutralizar Radiantes. Ele é capaz de suprimir habilidades inimigas, comprometendo a capacidade de contra-ataque dos adversários e dando a si próprio e a seus aliados uma vantagem essencial em combate.</p>
+         <p>Chamber: Bem vestido e armado até os dentes, o criador de armas francês Chamber coloca os inimigos para correr com uma precisão mortal. Use e abuse do arsenal personalizado dele para segurar posições e abater inimigos de longe, criando a defesa perfeita para qualquer plano.</p>
+         <figure>
+            <img class="img_corpo" src="img/chamber-valorant.webp" alt="Personagem novo de valorant">
+       </figure>
+         <p>Neon: Neon, nossa Agente filipina, avança em velocidades incríveis, descarregando surtos de radiância bioelétrica tão rapidamente quanto seu corpo consegue gerá-los. Ela corre à frente para pegar os inimigos de surpresa, abatendo-os mais rápido do que um raio. </p>
+         <p>Fade:Fade, uma caçadora de recompensas turca, usa o poder dos pesadelos para capturar os segredos dos inimigos. Personificando o próprio terror, ela persegue os alvos e revela seus medos mais profundos para, depois, destruí-los na escuridão. </p>
+
     </div>
 </body>
 </html>
