--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 <body>
     <header>
         <h1>Valorant</h1>
+        <nav class="menu">
+            <div class="logo">
+            </div>
+            <div class="itens_menu">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#sobre">Valorant- Biografia</a></li>
+                    <li><a href="#mais">Riot Games</a></li>
+                    <li><a href="#">Faça o download</a></li>
+                    <li><a href="contato.html">Personagem</a></li>
+                </ul>
+            </div>
         <figure>
             <img class="img_topo" src="https://pbs.twimg.com/media/FHQEtVkXwAQMs8L.jpg:large" alt="Foto do valorant">
         </figure>
@@ -18,8 +30,8 @@
     <div class="container">
         <h6> Escute musica enquanto navegue pelo site</h6>
         <audio class="audio" controls>
-            <source src="Die For You ft. Grabbitz Official Music Video VALORANT Champions 2021.mp3" type="audio/ogg">
-            <source src="horse.mp3" type="audio/mpeg">
+            <source src="audio/Die For You ft. Grabbitz Official Music Video VALORANT Champions 2021.mp3" type="audio/ogg"s>
+            <source src=" type="audio/mpeg">
           Your browser does not support the audio element.
           </audio>
        
@@ -30,7 +42,7 @@
              <img class="img_corpo" src="img/vava.png" alt="Personagem novo de valorant">
         </figure>
         <p>Lançada em 24 de novembro, a coleção Champions 2021 é uma conjunto de itens em edição limitada com o valor de 6.263 Valorant Points (VPs), contendo skins para Vandal (2.675 VPs), Karambit (5.350 VPs) e diversos acessórios como cards (375 VPs cada) e um título (200 VPs).</p>
-         <h3> Riot Gamaes</h3>
+         <h3> Riot Games</h3>
          <p>Riot Games é uma empresa americana fundada como um estúdio de jogos independente em 2006 por Brandon "Ryze" Beck e Marc "Tryndamere" Merril, em Los Angeles. Em 2015 foi comprada pela empresa chinesa Tencent</p>
          <img class="img_corpo" src="img/nova-marca-riot-games-flat-design-2.png" alt="Empresa do jogo">
          <h4>Onde fazer download do jogo</h4>
@@ -120,6 +132,21 @@
         </a>
     </body>
      </header>
+     <body><style>
+        a:link, a:visited {
+          background-color: #f44336;
+          color: white;
+          padding: 5px 5px;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+        }
+        
+        a:hover, a:active {
+          background-color: red;
+        }
+        </style>
+        </body>
     <footer>
        Feito pelo Aluno: Arthur Gaspar Mari 
        Turma:1°F GRUPO: A
