--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
                     <li><a href="#Valorant- Biografia">Valorant- Biografia</a></li>
                     <li><a href="#Riot Games">Riot Games</a></li>
                     <li><a href="#Instale o jogo">Faça o download</a></li>
-                    <li><a href="indexsite2.html">Personagem</a></li>
+                    <li><a href="# Personagem">Personagem</a></li>
+                    <li><a href="https://www.twitch.tv/valorant">Canal oficial do jogo</a></li>
+                    <li><a href="https://www.twitch.tv/valorant_br">Canla oficial do jogo BRSAIL</a></li>
+                    <li><a href= "formulario.html">Formulários</a></li>
                     <li><a href="#footer"<>footer</a></li>
                     <style>
                         .scroll-behavior: smooth;
@@ -56,8 +59,14 @@
         <p class="coisinha"> Instale o jogo
             <div class="botao"> <a href="https://playvalorant.com/pt-br/?gclid=EAIaIQobChMIkrvL6IvE-AIVQuVcCh3zigE0EAAYASAAEgIeJPD_BwE&gclsrc=aw.ds">aqui</a></p1></div>
             <section id="Personagem">
+                <section id=" Personagem">
             <h5> Personagem</h5>
-         
+        <div>
+            <div class="logo2">
+                <div class="itens_menu2">
+                <ul class="sub-menu">
+                    <li><a href="#Valorant">VOLTAR</a></li>
+                </ul>
          <figure>
             <img class="img_corpo" src="img/personagens vavas.jpg" alt="Personagem novo de valorant">
        </figure>
@@ -105,7 +114,7 @@
          <img class="img_corpo" src="img/neon.webp" alt="Personagem novo de valorant">
          <p>Fade:Fade, uma caçadora de recompensas turca, usa o poder dos pesadelos para capturar os segredos dos inimigos. Personificando o próprio terror, ela persegue os alvos e revela seus medos mais profundos para, depois, destruí-los na escuridão. </p>
          <img class="img_corpo" src="img/valorant-fade.webp" alt="Personagem novo de valorant">
-         
+         </div>
     </div>
     <header>
         <nav class="menu">
