--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
          <p>Skye:Mandando um salve direto da Austrália, Skye e sua equipe de feras desbravam territórios hostis. Com seus poderes de cura e suas criações que partem pra cima dos inimigos, qualquer equipe ficará mais forte e mais segura tendo Skye como aliada. </p>
          <img class="img_corpo" src="img/skye.jpg" alt="Personagem novo de valorant">
          <p>Yoru: Yoru, nativo do Japão, abre fendas na realidade para infiltrar as linhas inimigas sem ser visto. Ele usa tanto artimanhas quanto táticas agressivas, e os alvos são abatidos sem saber de onde o ataque veio.</p>
-         <img class="img_corpo" src="img/yoru.jfif" alt="Personagem novo de valorant">
+         <img class="img_corpo" src="img/yorus.jpg" alt="Personagem novo de valorant">
          <p>Astra: Astra, a Agente ganense, utiliza energias cósmicas para moldar o campo de batalha a seu bel-prazer. Com total domínio da sua forma astral e um talento estratégico nato, ela está sempre anos-luz à frente dos inimigos.</p>
          <img class="img_corpo" src="img/astra.jpg" alt="Personagem novo de valorant">
          <p>KAY/O: KAY/O é uma máquina de guerra construída com um único propósito: neutralizar Radiantes. Ele é capaz de suprimir habilidades inimigas, comprometendo a capacidade de contra-ataque dos adversários e dando a si próprio e a seus aliados uma vantagem essencial em combate.</p>
