--- a/formulario.html
+++ b/formulario.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <link rel="stylesheet" href="css/estilo.css">
     <div class="cantainer">
     <form action="Formulário2.html">
         <label for="fname">Nome:</label><br>
