--- a/Formulário2.html
+++ b/Formulário2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <link rel="stylesheet" href="css/estilo.css">
     <div class="cantainer">
         <form action="formulario.html">
             <label for="fname">email</label><br>
