--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
     </header>
     <div class="container">
         <h6> Escute musica enquanto navegue pelo site</h6>
+        <style>
+           .auidio{
+            position:fixed;
+            width: 100%;
+            height: 1220px;
+            text-align:right;
+           } 
+            
+            </style>
         <audio class="audio" controls>
             <source src="audio/Die For You ft. Grabbitz Official Music Video VALORANT Champions 2021.mp3" type="audio/ogg"s>
             <source src=" type="audio/mpeg">
