--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <title>Vava</title>
 </head>
 <body>
+   
     <header>
         <section id="Valorant">
-        <h1>Valorant</h1>
+         <div class="img_logo">
+            <img src="img/coisinhaa.png">
+         </div>   
+       
         <nav class="menu">
             <div class="logo">
                 <div class="itens_menu">
@@ -19,10 +23,10 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#Valorant- Biografia">Valorant- Biografia</a></li>
                     <li><a href="#Riot Games">Riot Games</a></li>
-                    <li><a href="#Instale o jogo">Faça o download</a></li>
+                    <li><a href="#Instale o jogo">Faça o download e veja o css</a></li>
                     <li><a href="# Personagem">Personagem</a></li>
                     <li><a href="https://www.twitch.tv/valorant">Canal oficial do jogo</a></li>
-                    <li><a href="https://www.twitch.tv/valorant_br">Canla oficial do jogo BRASIL</a></li>
+                    <li><a href="https://www.twitch.tv/valorant_br">Canal oficial do jogo BRASIL</a></li>
                     <li><a href= "formulario.html">Formulários</a></li>
                     <li><a href="#footer"<>footer</a></li>
                     <style>
@@ -65,10 +69,12 @@
          <img class="img_corpo" src="img/nova-marca-riot-games-flat-design-2.png" alt="Empresa do jogo">
          <section id="Instale o jogo">
          <h4>Onde fazer download do jogo</h4>
-        <p class="coisinha"> Instale o jogo
-            <div class="botao"> <a href="https://playvalorant.com/pt-br/?gclid=EAIaIQobChMIkrvL6IvE-AIVQuVcCh3zigE0EAAYASAAEgIeJPD_BwE&gclsrc=aw.ds">aqui</a></p1></div>
+        <p class="coisinha"> Instale o jogo e Abra o css
+            <div class="botao"> <a href="https://playvalorant.com/pt-br/?gclid=EAIaIQobChMIkrvL6IvE-AIVQuVcCh3zigE0EAAYASAAEgIeJPD_BwE&gclsrc=aw.ds">instale o jogo aqui</a></p1></div>
             <section id="Personagem">
+                <div class="botao css"><a href="file:///C:/Users/ETEC/Desktop/meuprimeirositenaetec/teste.html"> veja o css</a></div>
                 <section id=" Personagem">
+                    <li><a href="#Valorant">VOLTAR</a></li>
             <h5> Personagem</h5>
         <div>
             <div class="logo2">
