--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="icon" type="favicon2" href="img/favicon2.jpg">
-    <title>Vava</title>
+    <title>Valorant</title>
 </head>
 <body>
    
@@ -15,8 +16,8 @@
          <div class="img_logo">
             <img src="img/coisinhaa.png">
          </div>   
-       
-        <nav class="menu">
+        </section>
+    </header>
             <div class="logo">
                 <div class="itens_menu">
                 <ul class="sub-menu">
@@ -28,17 +29,16 @@
                     <li><a href="https://www.twitch.tv/valorant">Canal oficial do jogo</a></li>
                     <li><a href="https://www.twitch.tv/valorant_br">Canal oficial do jogo BRASIL</a></li>
                     <li><a href= "formulario.html">Formulários</a></li>
-                    <li><a href="#footer"<>footer</a></li>
+                    <li><a href="#footer">footer</a></li>
+                </ul>
+                </div>
+            </div>
                     <style>
                         .scroll-behavior: smooth;
                     </style>
-                </ul>
-            </div>
-            </div>
         <figure>
             <img class="img_topo" src="https://pbs.twimg.com/media/FHQEtVkXwAQMs8L.jpg:large" alt="Foto do valorant">
         </figure>
-    </header>
     <div class="container">
         <h6> Escute musica enquanto navegue pelo site</h6>
         <style>
@@ -72,7 +72,7 @@
         <p class="coisinha"> Instale o jogo e Abra o css
             <div class="botao"> <a href="https://playvalorant.com/pt-br/?gclid=EAIaIQobChMIkrvL6IvE-AIVQuVcCh3zigE0EAAYASAAEgIeJPD_BwE&gclsrc=aw.ds">instale o jogo aqui</a></p1></div>
             <section id="Personagem">
-                <div class="botao css"><a href="file:///C:/Users/ETEC/Desktop/meuprimeirositenaetec/teste.html"> veja o css</a></div>
+                <div class="botao css"><a href="teste.html"> veja o css</a></div>
                 <section id=" Personagem">
                     <li><a href="#Valorant">VOLTAR</a></li>
             <h5> Personagem</h5>
