--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
     <title>Valorant</title>
 </head>
 <body>
-   
-    <header>
+    <header class="fixo">
+
         <section id="Valorant">
          <div class="img_logo">
             <img src="img/coisinhaa.png">
          </div>   
         </section>
-    </header>
-            <div class="logo">
-                <div class="itens_menu">
-                <ul class="sub-menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#Valorant- Biografia">Valorant- Biografia</a></li>
-                    <li><a href="#Riot Games">Riot Games</a></li>
-                    <li><a href="#Instale o jogo">Faça o download e veja o css</a></li>
-                    <li><a href="# Personagem">Personagem</a></li>
-                    <li><a href="https://www.twitch.tv/valorant">Canal oficial do jogo</a></li>
-                    <li><a href="https://www.twitch.tv/valorant_br">Canal oficial do jogo BRASIL</a></li>
-                    <li><a href= "formulario.html">Formulários</a></li>
-                    <li><a href="#footer">footer</a></li>
-                </ul>
-                </div>
+        <div class="logo">
+            <div class="itens_menu">
+            <ul class="sub-menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#Valorant- Biografia">Valorant- Biografia</a></li>
+                <li><a href="#Riot Games">Riot Games</a></li>
+                <li><a href="#Instale o jogo">Faça o download e veja o css</a></li>
+                <li><a href="# Personagem">Personagem</a></li>
+                <li><a href="https://www.twitch.tv/valorant">Canal oficial do jogo</a></li>
+                <li><a href="https://www.twitch.tv/valorant_br">Canal oficial do jogo BRASIL</a></li>
+                <li><a href= "formulario.html">Contato</a></li>
+                <li><a href="#footer">footer</a></li>
+            </ul>
             </div>
+        </div>
+    </header>
                     <style>
                         .scroll-behavior: smooth;
                     </style>
