--- a/teste.html
+++ b/teste.html
@@ -25,7 +25,7 @@
 
         .container {
             position: relative;
-            background-color: rgb(76, 18, 131);
+            background-color: rgba(0, 0, 0, 0)
             width: 100%;
             height: 1220px;
             text-align: center;
