--- a/index.html
+++ b/index.html
@@ -6,32 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="./css/stylee.css">
     <link rel="icon" type="favicon2" href="img/favicon2.jpg">
     <title>Valorant</title>
 </head>
 <body>
     <header class="fixo">
-
         <section id="Valorant">
-         <div class="img_logo">
-            <img src="img/coisinhaa.png">
-         </div>   
-        </section>
-        <div class="logo">
-            <div class="itens_menu">
-            <ul class="sub-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#Valorant- Biografia">Valorant- Biografia</a></li>
-                <li><a href="#Riot Games">Riot Games</a></li>
-                <li><a href="#Instale o jogo">Faça o download e veja o css</a></li>
-                <li><a href="# Personagem">Personagem</a></li>
-                <li><a href="https://www.twitch.tv/valorant">Canal oficial do jogo</a></li>
-                <li><a href="https://www.twitch.tv/valorant_br">Canal oficial do jogo BRASIL</a></li>
-                <li><a href= "formulario.html">Contato</a></li>
-                <li><a href="#footer">footer</a></li>
-            </ul>
+            <div class="row">
+                <div class="img_logo column-1">
+                    <img src="img/coisinhaa.png">
+                </div>         
+                <div class="itens_menu column-2">
+                    <ul class="sub-menu">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#Valorant- Biografia">Valorant- Biografia</a></li>
+                        <li><a href="#Riot Games">Riot Games</a></li>
+                        <li><a href="#Instale o jogo">Faça o download e veja o css</a></li>
+                        <li><a href="# Personagem">Personagem</a></li>
+                        <li><a href="https://www.twitch.tv/valorant">Canal oficial do jogo</a></li>
+                        <li><a href="https://www.twitch.tv/valorant_br">Canal oficial do jogo BRASIL</a></li>
+                        <li><a href= "formulario.html">Contato</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
+        </section>
     </header>
                     <style>
                         .scroll-behavior: smooth;
@@ -52,7 +51,7 @@
             </style>
         <audio class="audio" controls>
             <source src="audio/Die For You ft. Grabbitz Official Music Video VALORANT Champions 2021.mp3" type="audio/ogg"s>
-            <source src=" type="audio/mpeg">
+            <source src=""type='audio/mpeg'>
           Your browser does not support the audio element.
           </audio>
           <section id="Valorant- Biografia">
@@ -175,10 +174,16 @@
      </header>
      <body><style>
         a:link, a:visited {
+            width: 115px;
+            height: 50px;
+            font-weight: bold;
+            border-radius: 20px;
+            font-family: Arial, Helvetica, sans-serif;
+            margin: 10px;
+            border: 1px solid #ffffff;
           background-color: #f44336;
           color: white;
           padding: 5px 5px;
-          text-align: center;
           text-decoration: none;
           display: inline-block;
         }
