--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
     </header>
                     <style>
-                        .scroll-behavior: smooth;
+                        .scroll-behavior smooth
                     </style>
         <figure>
             <img class="img_topo" src="https://pbs.twimg.com/media/FHQEtVkXwAQMs8L.jpg:large" alt="Foto do valorant">
@@ -172,7 +172,8 @@
         </a>
     </body>
      </header>
-     <body><style>
+     <body>
+        <style>
         a:link, a:visited {
             width: 100px;
             height: 50px;
