--- a/teste.html
+++ b/teste.html
@@ -96,10 +96,10 @@
 <body>
 
     <header>
-        <h1 class="fixa" style="background-color:brown;color: cyan;"> Teste CSS interno e Inline </h1>
+        <h1 class="fixa" style="background-color:rgba(0, 0, 0, 0);color: cyan;"> Teste CSS interno e Inline </h1>
     </header>
     <div class="main">
-        <h1>Testando....</h1>
+        <h1>teste</h1>
         <div class="container">
             <div class="topoesquerda">TopoEsq</div>
             <div class="topodireita">TopoDir</div>
