--- a/formulario.html
+++ b/formulario.html
@@ -9,32 +9,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
 </head>
-<body class="fundo_vermelho">
-    <header class="fixo">        
-        <div class="logo">
-            <img class="img_logo" src="img/logogrande.png" alt="">
-        </div>
-        <nav class="itens_menu">                
-                <ul>
-                        <li><a href="index.html">Valorant- Biografia</a></li>
-                        <li><a href="index.html">Riot Games</a></li>
-                        <li><a href="index.html">Faça o download e veja o css</a></li>
-                        <li><a href="index.html">Personagem</a></li>
-                        <li><a href="https://www.twitch.tv/valorant">Canal oficial do jogo</a></li>
-                        <li><a href="https://www.twitch.tv/valorant_br">Canal oficial do jogo BRASIL</a></li>
-                </ul>                
-        </nav>        
+<header class="fixo">
+  <section id="Valorant">
+      <div class="row">
+          <div class="img_logo column-1">
+              <img src="img/coisinhaa.png">
+          </div>         
+          <div class="itens_menu column-2">
+              <ul class="sub-menu">
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="#Valorant- Biografia">Valorant- Biografia</a></li>
+                  <li><a href="#Riot Games">Riot Games</a></li>
+                  <li><a href="#Instale o jogo">Faça o download e veja o css</a></li>
+                  <li><a href="# Personagem">Personagem</a></li>
+                  <li><a href="https://www.twitch.tv/valorant">Canal oficial do jogo</a></li>
+                  <li><a href="https://www.twitch.tv/valorant_br">Canal oficial do jogo BRASIL</a></li>
+              </ul>
+          </div>
+      </div>
+  </section>
 </header>
-    <div class="container descer">
-        <section>
-            <h1>Entre e contato aqui</h1>
-            <div class="form">
-                <form action="#">                    
-                    <div class="row">
-                        <div class="col-25">
-                            <label>Digite seu nome: </label>
-                        </div>
-                        <div class="col-75">
+   <div class="container_descer">
+     <section>
+     <h1>Entre e contato aqui</h1>
+       <div class="form">
+         <form action="#">                    
+             <div class="row">
+                  <div class="col-25">
+                      <label>Digite seu nome: </label>
+                     </div>
+                 <div class="col-75">
                             <input type="text" placeholder="Coloque seu nome completo">
                         </div>   
                     </div>
@@ -72,7 +76,7 @@
                             <label> Mensagem</label>
                         </div>
                         <div class="col-75">
-                            <textarea name="message" rows="10" cols="30">
+                            <textarea name="message" rows="20" cols="50">
                             </textarea> 
                         </div>  
                     </div>
@@ -83,8 +87,60 @@
             </div>
         </section>       
     </div>
+    <style>
+      a:link, a:visited {
+          width: 100px;
+          height: 50px;
+          font-weight: bold;
+          border-radius: 20px;
+          font-family: Arial, Helvetica, sans-serif;
+          margin: 5px;
+          border: 1px solid #ffffff;
+        background-color: #f44336;
+        color: white;
+        padding: 5px 5px;
+        text-decoration: none;
+        display: inline-block;
+      }
+      
+      a:hover, a:active {
+        background-color: rgb(0, 0, 0);
+      }
+      </style>
+      <style>
+        .sub-menu {
+    display: flex;
+}
+
+.sub-menu li a {
+    align-items: center;
+
+}
+
+.column-1 {
+    float: left;
+    width: 20%;
+  }
+
+  .column-2 {
+    float: left;
+    width: 20%;
+    margin: 50px 0px 0px 50px;
+  }
+  
+  .column img {
+    width: 50%;
+  }
+
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+      </style>
     <footer>
-        <p class ="center">Feito pelo Aluno: Arthur Gaspar Mari 
+        <p class ="left">Feito pelo Aluno: Arthur Gaspar Mari 
           Turma:1°F GRUPO: A</p>
     </footer>
 </body>
