--- a/formulario.html
+++ b/formulario.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="favicon2" href="img/favicon2.jpg">
     <title>Contato</title>
 </head>
 <header class="fixo">
@@ -18,10 +19,10 @@
           <div class="itens_menu column-2">
               <ul class="sub-menu">
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="#Valorant- Biografia">Valorant- Biografia</a></li>
-                  <li><a href="#Riot Games">Riot Games</a></li>
-                  <li><a href="#Instale o jogo">Faça o download e veja o css</a></li>
-                  <li><a href="# Personagem">Personagem</a></li>
+                  <li><a href="index.html">Valorant- Biografia</a></li>
+                  <li><a href="index.html">Riot Games</a></li>
+                  <li><a href="index.html">Faça o download e veja o css</a></li>
+                  <li><a href="index.html">Personagem</a></li>
                   <li><a href="https://www.twitch.tv/valorant">Canal oficial do jogo</a></li>
                   <li><a href="https://www.twitch.tv/valorant_br">Canal oficial do jogo BRASIL</a></li>
               </ul>
@@ -89,22 +90,22 @@
     </div>
     <style>
       a:link, a:visited {
-          width: 100px;
-          height: 50px;
-          font-weight: bold;
-          border-radius: 20px;
-          font-family: Arial, Helvetica, sans-serif;
-          margin: 5px;
-          border: 1px solid #ffffff;
-        background-color: #f44336;
-        color: white;
-        padding: 5px 5px;
-        text-decoration: none;
-        display: inline-block;
-      }
-      
-      a:hover, a:active {
-        background-color: rgb(0, 0, 0);
+        width: 100px;
+    height: 50px;
+    font-weight: bold;
+    border-radius: 10px;
+    font-family: Arial,sans-serif;
+    margin: 3px;
+    border: 1px solid #000000b9;
+  background-color: rgb(128, 54, 54);
+  color: rgba(255, 0, 0, 0.74);
+  padding: 3px 5px;
+  text-decoration: none;
+  display: inline-block;
+    }
+  a:hover, a:active {
+  background-color: rgb(89, 1, 160);
+    }
       }
       </style>
       <style>
@@ -132,11 +133,72 @@
     width: 50%;
   }
 
-  /* Clear floats after the columns */
   .row:after {
     content: "";
     display: table;
     clear: both;
+  }
+      </style>
+      <style>
+        footer{
+            background-color: rgba(0, 0, 0, 0.699);
+    padding-top: 0.6%;
+    padding-bottom: 2%;
+    font-size: 1.5em;
+    text-align: justify;
+        }
+        form {
+    box-sizing: border-box;
+    font-family: 'DancingScript-VariableFont_wght', Didot;
+  }
+
+.form{
+    background-color: rgba(128,128,128, 0.5) ;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+input[type=text], input[type=tel], input[type=email], select, textarea {
+    width: 90%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 25px;
+    resize: vertical;
+    font-family: 'DancingScript-VariableFont_wght',Didot;    
+  }
+
+  label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+    font-family: 'DancingScript-VariableFont_wght',Didot;    
+  }
+
+  input[type=submit] {
+    background-color:rgba(128,128,128, 0.5)  ;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+    font-family: 'DancingScript-VariableFont_wght',Didot;    
+  }
+
+  input[type=submit]:hover {
+    background-color: #4e2929 ;
+    font-family: 'DancingScript-VariableFont_wght',Didot;    
+  }
+
+  .col-25 {
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+  }
+  
+  .col-75 {
+    float: left;
+    width: 75%;
+    margin-top: 6px;
   }
       </style>
     <footer>
@@ -145,4 +207,3 @@
     </footer>
 </body>
 </html>
-,,
