--- a/teste.html
+++ b/teste.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="icon" type="img/iconnn" href="img/iconnn.jpg">
+    <link rel="icon" type="favicon2" href="img/favicon2.jpg">
     <title> teste csss </title>
     <style>
         body {
@@ -90,6 +91,13 @@
             right: 0;
             left: 0;
         }
+        footer{
+            background-color: rgba(255, 255, 255, 0.699);
+    padding-top: 0.6%;
+    padding-bottom: 2%;
+    font-size: 1.5em;
+    text-align: justify;
+        
     </style>
 </head>
 
@@ -109,7 +117,11 @@
         </div>
 
     </div>
-
+    <footer>
+        Feito pelo Aluno: Arthur Gaspar Mari 
+        Turma:1°F GRUPO: A
+ 
+     </footer>
 </body>
 
 </html>
