--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                         <li><a href="#Riot Games">Riot Games</a></li>
                         <li><a href="#Instale o jogo">Faça o download e veja o css</a></li>
                         <li><a href="# Personagem">Personagem</a></li>
+                        <li><a href="Jogadores.html">Melhores jogadores</a></li>
                         <li><a href="https://www.twitch.tv/valorant">Canal oficial do jogo</a></li>
                         <li><a href="https://www.twitch.tv/valorant_br">Canal oficial do jogo BRASIL</a></li>
                         <li><a href= "formulario.html">Contato</a></li>
